# Nikke-SpArena-MatchMaintain

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.py
config/: match_schema.toml
config/references/: chara_list_pvp.toml
sdk/: __init__.py  cli.py  client.py  exceptions.py
src/match_maintain/: app.py  config.py
src/match_maintain/api/v1/: __init__.py  files.py  health.py  history.py  matches.py  validate.py
src/match_maintain/cli/: main.py
src/match_maintain/core/: dependencies.py  exceptions.py  logging.py  schema.py
src/match_maintain/core/cache/: __init__.py  base.py  memory.py
src/match_maintain/domain/: __init__.py  field_completer.py  file_browser.py  fixer_service.py  match_service.py  transaction.py  validate_service.py
src/match_maintain/infrastructure/: __init__.py  git_versioning.py  toml_repository.py
src/match_maintain/middleware/: error_handler.py  request_logging.py
src/match_maintain/models/: __init__.py  history.py  match.py  request.py  validation.py
src/match_maintain/web/: routes.py
src/match_maintain/web/static/css/: main.css
src/match_maintain/web/static/js/: main.js
src/match_maintain/web/templates/layouts/: base.html
src/match_maintain/web/templates/pages/: archive.html  crawler.html  history.html  index.html  matches.html  ocr.html  validate.html
tests/: conftest.py  test_plan.md
tests/unit/test_api/: test_health.py
